--- a/smblog/package.json
+++ b/smblog/package.json
@@ -14,8 +14,7 @@
     "react": "^18",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^18",
-    "react-icons": "^5.2.1",
-    "react-redux": "^9.1.2"
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
