--- a/smblog/package.json
+++ b/smblog/package.json
@@ -14,7 +14,8 @@
     "react": "^18",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
