--- a/smblog/package.json
+++ b/smblog/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
-    "next": "14.2.3",
+    "next": "^14.2.4",
     "react": "^18",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^18",
